[package]
name = "lau-kahler-agents"
version = "0.1.0"
edition = "2021"
description = "Kähler geometry for agents — where Riemannian, symplectic, and complex geometry unify"
license = "MIT"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
